Fix gitignore issues

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /ParkerSolarProbe/[Oo]bj/
 /ParkerSolarProbe/[Bb]uild/
 /ParkerSolarProbe/[Bb]uilds/
+/ParkerSolarProbe/Logs/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
